fix non-collapsing dropdown nav

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -41,6 +41,7 @@ body {
   position: relative;
   top: -20px;
   right: -15px;
+  margin-bottom: -20px;
 }
 
 .topic_summary {
